# kalamine

./: Makefile  README.md  pyproject.toml  qwerty-fr.yaml  setup.py
kalamine/: cli.py  layout.py  template.py  utils.py  xkb_manager.py
kalamine/data/: dead_keys.yaml
